--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -196,10 +196,13 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1063.960044
+      value: 1063.9600437074787
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1031.1107560999872
@@ -212,7 +215,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 655.0343565
+      value: 655.0343565422723
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 603.2813480693219
@@ -235,6 +238,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -260,7 +267,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 825.7991359
+      value: 825.7991358770756
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 830.0476571185673
@@ -315,11 +322,14 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 282.7016835752059
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1070.1093959999998
+      source: eGrid 2020; IPCC 2014
+      value: 1123.9600437074787
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1091.1107560999872
@@ -332,7 +342,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 775.0343565
+      value: 775.0343565422723
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 723.2813480693219
@@ -355,6 +365,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -389,7 +403,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1069.7991359
+      value: 1069.7991358770755
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1074.0476571185673
