--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -167,7 +167,7 @@ emissionFactors:
       value: 493.0079136484788
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -191,10 +191,14 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 1019.6370786222118
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 991.3927748632145
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 471.3724863
+      value: 471.372486346701
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 484.4162449973497
@@ -207,7 +211,7 @@ emissionFactors:
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 56.8894463
+      value: 56.889446297258615
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 88.15169296086768
@@ -252,6 +256,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 692.2365799135232
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -285,9 +293,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 504.89
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 39.38869109
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -316,10 +325,14 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 1079.637078622212
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1051.3927748632145
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 591.3724863
+      value: 591.372486346701
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 604.4162449973496
@@ -332,7 +345,7 @@ emissionFactors:
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 94.8894463
+      value: 94.88944629725862
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 126.15169296086768
@@ -389,6 +402,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 936.2365799135232
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
