--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -236,7 +236,7 @@ emissionFactors:
       value: 437.0786046556874
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -250,7 +250,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 521.6312947
+      value: 521.6312947097579
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 569.1649476424932
@@ -264,7 +264,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 423.934686
+      value: 423.93468599511147
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 423.8115836376518
@@ -287,6 +287,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -312,7 +316,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1162.940076
+      value: 1162.9400758736372
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 654.9016481509434
@@ -355,9 +359,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 502.32
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 572.1600047
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -373,7 +378,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 581.6312947
+      value: 581.6312947097579
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 629.1649476424932
@@ -387,7 +392,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 543.934686
+      value: 543.9346859951115
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 543.8115836376518
@@ -410,6 +415,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -444,7 +453,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1406.940076
+      value: 1406.9400758736372
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 898.9016481509434
