--- a/config/zones/US-NW-PACE.yaml
+++ b/config/zones/US-NW-PACE.yaml
@@ -310,10 +310,13 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: BEIS 2021
       value: 0.0
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1048.49561
+      value: 1048.4956104894752
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1038.2985708247186
@@ -326,7 +329,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 405.722707
+      value: 405.7227070033736
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 404.1966603887903
@@ -339,7 +342,7 @@ emissionFactors:
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 32.63419569
+      value: 32.63419569396435
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 61.077625605917994
@@ -384,6 +387,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 692.2365799135232
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -426,11 +433,14 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 282.7016835752059
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1107.353715
+      source: eGrid 2020; IPCC 2014
+      value: 1108.4956104894752
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1098.2985708247186
@@ -443,7 +453,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 525.722707
+      value: 525.7227070033737
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 524.1966603887903
@@ -456,7 +466,7 @@ emissionFactors:
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 70.63419569
+      value: 70.63419569396436
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 99.077625605918
@@ -510,6 +520,10 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 936.2365799135232
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
